--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
-Package: swirl_testing
+Package: swirlitest
 Type: Package
-Title: What the package does (short line)
+Title: Test all lessons of a swirl course. 
 Version: 1.0
 Date: 2015-08-19
-Author: Who wrote it
-Maintainer: Who to complain to <yourfault@somewhere.net>
-Description: More about what it does (maybe more than one line)
-License: What license is it under?
+Author: Chih-Cheng Liang
+Maintainer: Chih-Cheng Liang <chihchengliang@gmail.com>
+Description: Test all lessons of a swirl course. 
+License: MIT
